<resources>
    <string name="app_name">SaveOurStudents</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login strings -->
    <string name="login">Log in</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="forgot_login">Forgot login?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="create_username_prompt">8-12 characters, a-z, A-Z, 0-9</string>
    <string name="create_password_prompt">Minimum 8 characters. Must contain X Y Z.</string> <!-- TODO: Validation constraints. -->
    <string name="create_password_confirmation_prompt">Enter your password again.</string>
    <string name="email_hint">E-mail</string>
    <string name="create_email_prompt">your_email@address.com</string>
    <string name="send_email_prompt">Send e-mail</string>
    <string name="forgot_credentials_prompt">Forget your login? Enter your email here and we\'ll send you your info.</string>
    <string name="usernameEmpty">Username field is empty!</string>
    <string name="passwordEmpty">Password field is empty!</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="invalidLogin">Login is invalid!</string>
    <string name="invalidEmail">Please enter a valid email!</string>
    <string name="emailSent">Email sent!</string>
    <string name="emailEmpty">Email is empty!</string>
    <string name="emailTaken">Email is taken</string>


    <!-- -->
    <string name="openDrawer">drawer open</string>
    <string name="closeDrawer">drawer closed</string>

    <string name="api_key">AIzaSyDbZqfUNxou2MHKsr9T42MNynUqRDDlRrs</string>
    <string name="facebook_app_id">1378269939169390</string>
    <string name="facebook_secret">b2a7fef9a5fa6681b7b96984fd4e7e8e</string>

    <string name="title_activity_profile">ProfileActivity</string>

    <string name="profile_rating">Rating</string>
    <string name="profile_aboutMe">About Me</string>
    <string name="profile_school">School</string>
    <string name="profile_major">Major</string>
    <string name="profile_description">Description</string>

    <string name="view_profile">View Profile</string>
    <string name="profile_editProfile">Edit Profile</string>
    <string name="profile_firstName">First Name</string>
    <string name="profile_lastName">Last Name</string>

    <string name="view_group_question">Question</string>
    <string name="view_group_location">Location</string>
    <string name="view_group_members">Members</string>
    <string name="view_group_members_students">Students</string>
    <string name="view_group_members_tutors">Tutors</string>

    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_question">QuestionActivity</string>

    <!-- Shared Prefs -->
    <string name="preference_file_key">com.sos.saveourstudents</string>
    <string name="title_activity_view_group">ViewGroupActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>

</resources>
