<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sos.saveourstudents.EditProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp">

            <TextView
                android:id="@+id/profile_editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_editProfile"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_editImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/profile_editProfile"
                android:layout_margin="16dp"
                android:src="@drawable/defaultprofile"
                app:border_color="@color/primary_light"
                app:border_width="2dp"
                android:clickable="true"/>

            <!--TODO: Change hints to the student's information -->

            <EditText
                android:id="@+id/profile_editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_alignBottom="@id/profile_editImage"
                android:layout_toRightOf="@id/profile_editImage"
                android:hint="@string/profile_lastName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text" />

            <EditText
                android:id="@+id/profile_editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/profile_editLastName"
                android:layout_toRightOf="@id/profile_editImage"
                android:paddingLeft="8dp"
                android:hint="@string/profile_firstName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text" />

            <EditText
                android:id="@+id/profile_editSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/profile_editImage"
                android:layout_below="@id/profile_editImage"
                android:padding="8dp"
                android:hint="@string/profile_school"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text"
                />

            <EditText
                android:id="@+id/profile_editMajor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/profile_editImage"
                android:layout_below="@id/profile_editSchool"
                android:padding="8dp"
                android:hint="@string/profile_major"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text"
                />

            <EditText
                android:id="@+id/profile_editDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/profile_editImage"
                android:layout_below="@id/profile_editMajor"
                android:padding="8dp"
                android:hint="@string/profile_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primary_text"
                />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
