
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_screen_main_logo"
        android:src="@drawable/logo_placeholder"
        android:background="@color/primary"
        android:paddingTop="@dimen/container_padding" />

    <TextView
        android:id="@+id/login_logo_label"
        android:layout_below="@id/login_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/app_name"
        android:textColor="@color/primary_text1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal"
        android:textSize="@dimen/textview_font_size"
        android:paddingBottom="@dimen/abc_action_bar_icon_vertical_padding_material"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/login_logo_label"
        android:touchscreenBlocksFocus="false" />


    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/username_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="@string/username_hint"
        android:inputType="textCapSentences"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        android:gravity="center"
        android:ems="7"
        />


    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/password_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_textfield"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="@string/password_hint"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        android:gravity="center"
        android:ems="7"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textfield"

        android:layout_marginTop="20dp"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:background="@color/primary"
        android:layout_marginBottom="@dimen/container_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/primary_text1" />


    <ImageView
        android:id="@+id/facebook_login_btn"
        android:layout_width="@dimen/fb_and_gplus_icon_size"
        android:layout_height="@dimen/fb_and_gplus_icon_size"
        android:layout_below="@+id/login_btn"
        android:layout_toLeftOf="@+id/google_login_btn"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:src="@drawable/ic_fb" />

    <ImageView
        android:src="@drawable/ic_gplus"
        android:id="@+id/google_login_btn"
        android:layout_width="@dimen/fb_and_gplus_icon_size"
        android:layout_height="@dimen/fb_and_gplus_icon_size"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_btn"
        android:scaleType="fitXY"
        android:padding="5dp"
        android:layout_marginRight="@dimen/container_padding" />

    <TextView
        android:id="@+id/signup_btn"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/container_padding"
        android:layout_marginBottom="@dimen/container_padding"
        android:textColor="@color/primary_dark" />

    <TextView
        android:id="@+id/forgot_login_btn"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/container_padding"
        android:layout_marginBottom="@dimen/container_padding"
        android:textColor="@color/primary_dark" />

</RelativeLayout>
