<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sos.saveourstudents.activities.ProfileActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:id="@+id/profile_image"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_firstName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/profile_image"
        android:layout_toEndOf="@+id/profile_image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_lastName"
        android:layout_toRightOf="@id/profile_firstName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_rating"
        android:id="@+id/profile_rating"
        android:layout_below="@id/profile_firstName"
        android:layout_toRightOf="@id/profile_image"
        android:layout_toEndOf="@id/profile_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_myRating"
        android:layout_toRightOf="@id/profile_rating"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_aboutme"
        android:id="@+id/profile_aboutme"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_school"
        android:id="@+id/profile_school"
        android:layout_below="@id/profile_aboutme"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_mySchool"
        android:layout_toRightOf="@id/profile_school"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_major"
        android:id="@+id/profile_major"
        android:layout_below="@id/profile_school"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_myMajor"
        android:layout_toRightOf="@id/profile_major"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_description"
        android:id="@+id/profile_description"
        android:layout_below="@+id/profile_major"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/profile_myDescription"
        android:layout_toRightOf="@id/profile_description"/>

</RelativeLayout>