<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:ignore="MergeRootFrame">

    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/signup_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="FIRST NAME"
        android:inputType="textCapSentences"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary_light"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        />

    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/signup_last_name"
        android:layout_below="@id/signup_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="LAST NAME"
        android:inputType="textCapSentences"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary_light"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        />

    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/signup_email_textfield"
        android:layout_below="@id/signup_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="@string/email_hint"
        android:inputType="textCapSentences"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary_light"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        />

    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/signup_password_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/signup_email_textfield"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary_light"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        />

    <com.rey.material.widget.EditText
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Material.Widget.EditText.Light"
        android:id="@+id/signup_password_confirm_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/signup_password_textfield"
        android:layout_marginTop="15dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/hint_text"
        android:hint="@string/create_password_confirmation_prompt"
        android:inputType="textCapSentences"
        app:et_autoCompleteMode="none"
        app:et_dividerColor="@color/primary_light"
        app:et_dividerPadding="4dp"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_supportMode="helper"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signup_btn"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>